--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                    <img src="./images/linkedin.png" alt="LinkedIn">
                                </a>
                         
-                               <a href="https://github.com/Rohit4446"><img src="./images/gihub.png" alt="GitHub"></a>
+                               <a href="https://github.com/RAHULKUMARCHANDER"><img src="./images/gihub.png" alt="GitHub"></a>
                                <a href="https://www.instagram.com/"><img src="./images/Instagram.jpg" alt="instagram"></a>
                             </div>
                             <div class="contact">
